crates/test-files/fixtures/compile_errors/missing_return.fe
contract Foo:
    baz: Map<u256, u256>

    pub fn bar() -> u256:
        self.baz[0] = 1
